Improved readability of 'God' and 'God state' notations

--- a/chapter-metaphysics.tex
+++ b/chapter-metaphysics.tex
@@ -16,4 +16,4 @@ The states (modes) of God (the substance) are evidently identified, under their 
 \begin{equation*}
 \God \eqdef \left( \H \times \CMS, (\op{\Pi}_\cms), \op U_\tau \right)
 \end{equation*}
-The states of God, taking the general form $(\ket \Psi, \cms)$, are said to be ``real'' if $\ket \Psi \in \H_\cms$ and ``virtual'' otherwise. An elementary evolution step of the state of God proceeds from a real state $(\ket{\Psi_0}, \cms_0)$, first evolving to a generally virtual state $(\op U_\tau \ket{\Psi_0}, \cms_0)$ and eventually collapsing to one of the real states $(\op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0}, \cms_1)$ with a probability $\bra{\Psi_0} \dop U_\tau \op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0} / \braket{\Psi_0}{\Psi_0}$.
+The states of God, taking the general form $\GodState{\ket \Psi}{\cms}$, are said to be ``real'' if $\ket \Psi \in \H_\cms$ and ``virtual'' otherwise. An elementary evolution step of the state of God proceeds from a real state $\GodState{\ket \Psi_0}{\cms_0}$, first evolving to a generally virtual state $\GodState{\op U_\tau \ket{\Psi_0}}{\cms_0}$ and eventually collapsing to one of the real states $\GodState{\op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0}}{\cms_1}$ with a probability $\bra{\Psi_0} \dop U_\tau \op{\Pi}_{\cms_1} \op U_\tau \ket{\Psi_0} / \braket{\Psi_0}{\Psi_0}$.
