--- a/notations.tex
+++ b/notations.tex
@@ -207,7 +207,10 @@
 \newcommand{\cms}{\mathfrak{M}} % Placeholder collective mind state
 \newcommand{\bM}[2]{{#1}_{#2}} % Mental state indices
 \newcommand{\bFM}[2]{({#1}_{#2})} % Mental field indices
-\newcommand{\God}{\mathfrak{G}} % God
+
+% Pantheist notations
+\newcommand{\God}{\mathfrak{g}} % God = Substance
+\newcommand{\GodState}[2]{\left({#1},{#2}\right)} % State of God = Mode of the Substance
 
 % Symbols
 \newcommand{\ExcitedAtom}{$\vcenter{\hbox{\includegraphics[height=.6cm]{images/pictures/atom.pdf}}}$} % Excited atom
