Added citation of Douglas Adams

--- a/chapter-stochastic-evolution.tex
+++ b/chapter-stochastic-evolution.tex
@@ -1,6 +1,9 @@
 \chapter{Stochastic evolution}
 \label{Stochastic evolution}
 
+\renewcommand{\epigraphwidth}{7cm}
+\epigraph{It sounded quite a sensible voice, but it just said, ``Two to the power of one hundred thousand to one against and falling,'' and that was all.}{Douglas Adams,\\\textit{The Hitchhiker's Guide to the Galaxy}~\cite{Adams1979}}
+
 \section{Collapse and collective mind selection}
 
 In the joint evolution of the mental and quantum states of the universe, I suppose that the quantum state $\ket \Psi$ periodically becomes randomly projected into one of the subspaces $\H_\cms$, corresponding to a given mental state $\cms$, with a probability given by:
