--- a/backmatter-bibliography.tex
+++ b/backmatter-bibliography.tex
@@ -1,5 +1,7 @@
 \begin{thebibliography}{99}
 
+\bibitem{Adams1979} Adams, D. (1979). \htmladdnormallink{\textit{The Hitchhiker's Guide to the Galaxy}}{http://www.amazon.com/dp/0345418913}. Pan Books, London (United Kingdom), 1979.
+
 \bibitem{Aspect1982} Aspect, A.; et al. (1982). \textit{Experimental Realization of Einstein-Podolsky-Rosen-Bohm Gedankenexperiment: A New Violation of Bell's Inequalities}. Physical Review Letters 49: 91, American Physical Society, College Park (Maryland, United States), 1982.
 
 \bibitem{Bassi2003} Bassi, A.; Ghirardi, G. (2003). \htmladdnormallink{\textit{Dynamical Reduction Models}}{http://arxiv.org/abs/quant-ph/0302164v2}. Physics Reports 379: 257, Elsevier, Amsterdam (The Netherlands), 2003.
