Added theorem on the immortality of the soul (without a demonstration yet)

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -53,6 +53,25 @@ Of course, this hypothesis is logically perfectly correct, but it is utmost diff
 %Und was gab das den Frauen für eine wehmütige Schönheit, wenn sie schwanger waren und standen, und in ihrem großen Leib, auf welchem die schmalen Hände unwillkürlich liegen blieben, waren zwei Früchte: ein Kind und ein Tod. Kam das dichte, beinah nahrhafte Lächeln in ihrem ganz ausgeräumten Gesicht nicht davon her, daß sie manchmal meinten, es wüchsen beide?
 %Rainer Maria Rilke: Die Aufzeichnungen des Malte Laurids Brigge
 
+\section{Immortality of the Soul}
+
+\paragraphtitle{Reminder} As stated in section \ref{Mental evolution}, Quantum Field Theory defines, for an arbitrary initial quantum state $\ket{\Psi_i} \in \H_{\cms_i}$ realized at time $t_i = 0$, the probability laws $\mathrm P_t(\cms_0, \dotsc, \cms_t)$, where $t \in \IN$, that a given sequence of collective mind states $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$. These probability laws read:
+\begin{equation*}
+\mathrm P_t(\cms_0, \dotsc, \cms_t) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
+\end{equation*}
+
+\paragraphtitle{Definitions} An infinite sequence $(\cms_t)$, indexed on $t \in \IN$, is said to be `certain' if $\mathrm P_t(\cms_0, \dotsc, \cms_t) = 1$ for all $t \in \IN$; `impossible' if there exists a $t_1 \in \IN$ such that $\mathrm P_t(\cms_0, \dotsc, \cms_t) = 0$ for all $t \geq t_1$; and `contingent' otherwise.
+
+It is said to be `dead' if it is constant, i.e. if $\cms_t = \cms_0$ for all $t \in \IN$; to be `dying' if it is eventually constant, i.e. if there exists a $t_1 \in \IN$ such that $\cms_t = \cms_{t_1}$ for all $t \geq t_1$, although $\cms_{t_0} \neq \cms_{t_1}$ for some $t_0 < t_1$; and to be `immortal' otherwise.
+
+An initial quantum state $\ket{\Psi_i} \in \H_{\cms_i}$ is said to be `certainly dead' if there is a certain dead sequence; to be `possibly dead' if there is a contingent dead sequence; to be `mortal' if there is a certain or at least contingent dying sequence; and to be `immortal' otherwise.
+
+\paragraphtitle{Lemma} Dying sequences are impossible.
+
+\paragraphtitle{Theorem} An initial quantum state is either dead or immortal; if it is possibly dead, the actual sequence of mental states is either dead or immortal.
+
+\paragraphtitle{Corollary} There are, or will be, extra-terrestrial forms of conscious life.
+
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
 
