Simplified formulation of the theorem

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -68,9 +68,9 @@ A real quantum state is said to be `certainly dead' if, taken as an initial stat
 
 \paragraphtitle{Lemma} Dying sequences are infinitely improbable.
 
-\paragraphtitle{Theorem} A real quantum state is either dead or immortal. If it is possibly dead, the actual sequence of mental states is, with certainty, either dead or immortal.
+\paragraphtitle{Theorem} No real quantum state is mortal.
 
-\paragraphtitle{Corollary} There are, or will be with certainty, extra-terrestrial forms of conscious life.
+\paragraphtitle{Corollary} There will be with certainty extra-terrestrial forms of conscious life.
 
 %TODO: Philosophical issues: Thought experiments
 %\chapter{Thought experiments}
