Specified initial state in the notation of the probability of a given mental sequence

--- a/chapter-philosophical-issues.tex
+++ b/chapter-philosophical-issues.tex
@@ -55,20 +55,20 @@ Of course, this hypothesis is logically perfectly correct, but it is utmost diff
 
 \section{Immortality of the Soul}
 
-\paragraphtitle{Reminder} As stated in section \ref{Mental evolution}, Quantum Field Theory defines, for an arbitrary real quantum state $\ket{\Psi_i} \in \H_{\cms_i} \setminus \{ 0 \}$ realized at the initial time $t_i = 0$, the probability laws $\mathrm P_t(\cms_0, \dotsc, \cms_t)$, where $t \in \IN$, that a given sequence of collective mind states $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$. These probability laws read:
+\paragraphtitle{Reminder} As stated in section \ref{Mental evolution}, Quantum Field Theory defines, for an arbitrary initial quantum state $\ket{\Psi_i} \neq 0$ realized at the initial time $t_i = 0$, the probability laws $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})$, where $t \in \IN$, that a given sequence of collective mind states $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$. These probability laws read:
 \begin{equation*}
-\mathrm P_t(\cms_0, \dotsc, \cms_t) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
+\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
 \end{equation*}
 
-\paragraphtitle{Definitions} An infinite sequence $(\cms_t)$, indexed on $t \in \IN$, is said to be `dead' if it is constant, i.e. if $\cms_t = \cms_0$ for all $t \in \IN$; to be `dying' if it is eventually constant, i.e. if there exists a $t_1 \in \IN^*$ such that $\cms_t = \cms_{t_1}$ for all $t \geq t_1$, although $\cms_{t_0} \neq \cms_{t_1}$ for some $t_0 < t_1$; and to be `immortal' otherwise.
+\paragraphtitle{Definitions} An infinite sequence $(\cms_t)$, indexed on $t \in \IN$, is said to be ``dead'' if it is constant, i.e. if $\cms_t = \cms_0$ for all $t \in \IN$; to be ``eventually dying'' if it becomes constant after a certain point, i.e. if there exists a $t_1 \in \IN^*$ such that $\cms_t = \cms_{t_1}$ for all $t \geq t_1$, although $\cms_{t_0} \neq \cms_{t_1}$ for some $t_0 < t_1$; and to be ``immortal'' otherwise.
 
-It is said to be `certain', for a given initial state, if $\mathrm P_t(\cms_0, \dotsc, \cms_t) = 1$ for all $t \in \IN$; `infinitely improbable' if $\lim_{t \to \infty} \mathrm P_t(\cms_0, \dotsc, \cms_t) = 0$; and `contingent' otherwise.
+It is said to be ``certain'', for a given initial state, if $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = 1$ for all $t \in \IN$; ``infinitely improbable'' if $\lim_{t \to \infty} \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = 0$; and ``contingent'' otherwise.
 
-A real quantum state is said to be `certainly dead' if, taken as an initial state, there is a certain dead sequence; to be `possibly dead' if there is a contingent dead sequence; to be `mortal' if there is a certain or at least contingent dying sequence; and to be `immortal' otherwise.
+A quantum state is said to be ``certainly dead'' if, taken as an initial state, one of the dead sequences is certain; to be ``possibly dead'' if a dead sequence is contingent; to be ``mortal'' if an eventually dying sequence is certain or at least contingent; and to be ``immortal'' otherwise.
 
-\paragraphtitle{Lemma} Dying sequences are infinitely improbable.
+\paragraphtitle{Lemma} Eventually dying sequences are infinitely improbable.
 
-\paragraphtitle{Theorem} No real quantum state is mortal.
+\paragraphtitle{Theorem} No quantum state is mortal.
 
 \paragraphtitle{Corollary} There will be with certainty extra-terrestrial forms of conscious life.
 
