--- a/chapter-stochastic-evolution.tex
+++ b/chapter-stochastic-evolution.tex
@@ -6,7 +6,7 @@
 
 \section{Collapse and collective mind selection}
 
-In the joint evolution of the mental and quantum states of the universe, I suppose that the quantum state $\ket \Psi$ periodically becomes randomly projected into one of the subspaces $\H_\cms$, corresponding to a given mental state $\cms$, with a probability given by:
+In the joint evolution of the mental and quantum states of the universe, I suppose that the quantum state $\ket \Psi$ periodically becomes randomly projected into one of the mental subspaces $\H_\cms$, corresponding to a given mental state $\cms$, with a probability given by:
 \begin{equation*}
 P(\cms) = \frac{\bra\Psi \op{\Pi}_\cms \ket\Psi}{\braket\Psi\Psi}
 \end{equation*}
@@ -18,34 +18,31 @@ where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$. Furthe
 \section{Mental evolution}
 \label{Mental evolution}
 
-Fundamentally, Quantum Field Theory also defines the probability that any given succession of collective mind states be experienced, an initial quantum state being given. Explicitely, for an initial quantum state $\ket{\Psi_i} \in \H_{\cms_i}$ at time $t_i = 0$, the probability $\mathrm P_t(\cms_0, \dotsc, \cms_t)$, where $t \in \IN$, that a given sequence $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$, reads for $t = 0$:
+Fundamentally, Quantum Field Theory also defines the probability that any given succession of collective mind states be experienced, an initial quantum state being given. Explicitely, for an initial quantum state $\ket{\Psi_i} \neq 0$ at time $t_i = 0$, the probability $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})$, where $t \in \IN$, that a given sequence $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$, reads for $t = 0$:
 \begin{equation*}
-\mathrm P_0(\cms_0) = \bra{\Psi_i} \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i} = \delta_{\cms_i}(\cms_0)
+\mathrm P_0(\cms_0; \ket{\Psi_i}) = \bra{\Psi_i} \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
 \end{equation*}
 for $t = 1$:
 \begin{equation*}
-\mathrm P_1(\cms_0, \cms_1) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
+\mathrm P_1(\cms_0, \cms_1; \ket{\Psi_i}) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
 \end{equation*}
 where $\op U_\tau \eqdef \exp{- \i 2 \pi \Hop \tau / \h}$, and more generally for $t \geq 2$:
 \begin{equation*}
-\mathrm P_t(\cms_0, \dotsc, \cms_t) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
+\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) = \bra{\Psi_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
 \end{equation*}
 
-The total probability $P_t(\cms_t)$ that a given collective mind state $\cms_t$ is being experienced at time $t \tau$, where $t \in \IN$, reads for $t = 0$:
+The total probability $P_t(\cms_t; \ket{\Psi_i})$ that a given collective mind state $\cms_t$ is being experienced at time $t \tau$, where $t \in \IN$, reads for $t = 0$:
 \begin{equation*}
-P_0(\cms_0) = \mathrm P_0(\cms_0)
+P_0(\cms_0; \ket{\Psi_i}) = \mathrm P_0(\cms_0; \ket{\Psi_i})
 \end{equation*}
 and more generally for $t \geq 1$:
 \begin{equation*}
-P_t(\cms_t) = \sum_{\cms_{t - 1}} \dotsm \sum_{\cms_0} \mathrm P_t(\cms_0, \dotsc, \cms_t)
+P_t(\cms_t; \ket{\Psi_i}) = \sum_{\cms_{t - 1}} \dotsm \sum_{\cms_0} \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})
 \end{equation*}
 
-\paragraphtitle{Remark} If the initial vector state isn't exactly known, averaging on an orthonormal basis of $\H_{\cms_i}$ leads to:
+\paragraphtitle{Remark} If the initial vector state isn't exactly known, but belongs to a given subspace $\H_i$, averaging on an orthonormal basis of this subspace leads to:
 \begin{equation*}
-\left< P_1(\cms_1) \right>_{\cms_i} = \mathrm{Tr}_{\H_{\cms_i}} \dop U_\tau \op \Pi_{\cms_1} \op U_\tau / \mathrm{dim} \H_{\cms_i}
-\end{equation*}
-\begin{equation*}
-\left< P_t(\cms_t) \right>_{\cms_i} = \sum_{\cms_{t - 1}} \dotsm \sum_{\cms_1} \mathrm{Tr}_{\H_{\cms_i}} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau / \mathrm{dim} \H_{\cms_i}
+\left< \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i}) \right>_{\H_i} = \mathrm{Tr}_{\H_i} \op \Pi_{\cms_0} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{\cms_t} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau \op \Pi_{\cms_0} / \mathrm{dim} \H_i
 \end{equation*}
 
 \paragraphtitle{Complements} In the case where the actually experienced collective mind state has a relatively high probability, our mental state may give us some clues about the physics of the world we live in; on the opposite, if our collective mind state has a very low probability, our mental experience has very little to do with the laws of the physical world and we live in a mere illusion of knowing something about the material reality -- without having any mean of noticing it. This dilemma is very well known of particle physicists, who have to accept they cannot make more precise statements about reality than, for instance, ``in the context of the standard model and in the presence of a sequential fourth family of fermions with high masses [...] a Higgs boson with mass between 144 and 207 GeV/$\mathrm{c}^2$ is ruled out at 95\% confidence level''~\cite{CMS2011}. Any physical model can also be conventionally, but not definitely, ``ruled out'' if it predicts the observed results with a probability considered to be too low.
