--- a/chapter-mental-states.tex
+++ b/chapter-mental-states.tex
@@ -18,11 +18,11 @@ The states of the mental world are supposed to be experienced collectively by th
 
 \section{Physical realization of mental states}
 
-The correspondence between mental and quantum states is given by a Hilbert subspace $\H_\cms$ associated to each possible mental state $\cms$ in such a way that these subspaces verify:
+The correspondence between mental and quantum states is given by a Hilbert subspace $\H_\cms$, called ``mental subspace'', associated to each possible mental state $\cms$ in such a way that these subspaces verify:
 \begin{equation*}
 \H = \bigoplus_{\cms}^\perp \H_\cms
 \end{equation*}
-Each vector $\ket \Psi \in \H_\cms$ is a quantum state of the universe in which the mental state $\cms$ is being experienced. Knowing the correspondence between $\cms$ and $\H_\cms$ is in essence solving the mind-body problem. As a working hypothesis, I shall assume that a mental state $\cms = \bFM N \ims$ is being realized physically by any quantum state describing a universe containing, for each individual mind state $\ims$, exactly $\bM N \ims$ human or animal brains presenting the specific activity pattern corresponding to $\ims$. The task of describing the possible individual mind states belongs in principle to psychology, whereas the characterization of the corresponding activity patterns of the brain is the aim of cognitive neuroscience.
+Each vector $\ket \Psi \in \H_\cms \setminus \{0\}$ is a quantum state of the universe in which the mental state $\cms$ is being experienced. Knowing the correspondence between mental states and mental subspaces is in essence solving the mind-body problem. As a working hypothesis, I shall assume that a mental state $\cms = \bFM N \ims$ is being realized physically by any quantum state describing a universe containing, for each individual mind state $\ims$, exactly $\bM N \ims$ human or animal brains presenting the specific activity pattern corresponding to $\ims$. The task of describing the possible individual mind states belongs in principle to psychology or philosophical phenomenology, whereas the characterization of the corresponding activity patterns of the brain is the aim of cognitive neuroscience.
 
 In mathematical terms, this hypothesis can be modeled as follows. First, the mental state $\cms_\vac \eqdef \bFM 0 \ims$, in which no ``sentient being'' is experiencing any individual mind state, is supposed to be possible, i.e. the corresponding subspace $\H_{\cms_\vac}$ is supposed not to be null. Then, for each possible individual mind state $\ims$, there is supposed to be a finite family of brain creation operators $(\dop{\Psi_\ims^\alpha})$ in $\cAlg$, which are creating a single brain with an activity pattern corresponding to $\ims$, such as:
 \begin{equation*}
